fixed overflow-y issue on homepage col 2

--- a/src/App.css
+++ b/src/App.css
@@ -278,7 +278,7 @@ nav {
   .homepage-col-2 {
     grid-template-columns: repeat(1, 1fr);
     justify-items: center;
-    overflow-y: auto;
+    overflow-y: initial;
   }
   .home-page-col-1 {
     border-right: 0;
